configured open api